# 2D_GAME

./: .clocignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  main.cpp
src/shader/: fragment_shader.glsl  vertex_shader.glsl
